# examples

./: .README.md  README.md
C++/argp/: CMakeLists.txt
C++/argp/src/: main.cpp
C++/use_std_expected/: CMakeLists.txt  CMakePresets.json
C++/use_std_expected/src/: main.cpp
D-Bus/: README.md
D-Bus/create_and_connect_to_peer-to-peer_message_bus/: README.md
D-Bus/create_and_connect_to_peer-to-peer_message_bus/apps/server/src/: main.cpp
D-Bus/create_and_connect_to_peer-to-peer_message_bus/src/DBusP2PExample/: Server.cpp  configure.hpp.in  dbus.cpp  init.cpp  init.hpp
D-Bus/create_and_connect_to_peer-to-peer_message_bus/tools/: upgrade-GitSemver.cmake.sh
D-Bus/get_credentials_of_method_caller/: README.md  cmake
D-Bus/get_credentials_of_method_caller/apps/client/: CMakeLists.txt
D-Bus/get_credentials_of_method_caller/apps/client/src/: main.cpp
D-Bus/get_credentials_of_method_caller/apps/server-sd_bus/src/: main.cpp
D-Bus/get_credentials_of_method_caller/apps/server/src/: main.cpp
D-Bus/get_credentials_of_method_caller/src/DBusGetCredentialsExample/: Server.cpp  Server.hpp  ServerSDBus.cpp  ServerSDBus.hpp  configure.hpp.in  init.hpp
D-Bus/get_credentials_of_method_caller/tools/: upgrade-CPM.cmake.sh
create_and_connect_to_peer-to-peer_message_bus/: CMakeLists.txt  README.md
create_and_connect_to_peer-to-peer_message_bus/api/dbus/: org.example.DBusP2PExampleServer.xml
create_and_connect_to_peer-to-peer_message_bus/apps/client/src/: main.cpp
create_and_connect_to_peer-to-peer_message_bus/apps/server/: CMakeLists.txt
create_and_connect_to_peer-to-peer_message_bus/apps/server/src/: main.cpp
create_and_connect_to_peer-to-peer_message_bus/src/DBusP2PExample/: Server.hpp  dbus.hpp
create_and_connect_to_peer-to-peer_message_bus/src/QDBusP2PExample/: Server.cpp
create_and_connect_to_peer-to-peer_message_bus/tools/: upgrade-CPM.cmake.sh  upgrade-GitSemver.cmake.sh  upgrade-PFL.cmake.sh
docs/: CONTRIBUTING.md  README.md  README.template.md
get_credentials_of_method_caller/: CMakeLists.txt  README.md
get_credentials_of_method_caller/api/dbus/: io.github.blackdesk.QDBusGetCredentialsExample.Server.xml  org.example.DBusGetCredentialsExampleServer.xml
get_credentials_of_method_caller/apps/client/src/: main.cpp
get_credentials_of_method_caller/apps/server/: CMakeLists.txt
get_credentials_of_method_caller/apps/server/src/: main.cpp
get_credentials_of_method_caller/src/DBusGetCredentialsExample/: Server.hpp  init.cpp
get_credentials_of_method_caller/src/QDBusGetCredentialsExample/: Server.cpp  Server.hpp  configure.hpp.in  init.cpp  init.hpp
get_credentials_of_method_caller/tools/: upgrade-GitSemver.cmake.sh  upgrade-PFL.cmake.sh
tools/: generate-readme.sh  upgrade-CPM.cmake.sh  upgrade-GitSemver.cmake.sh  upgrade-PFL.cmake.sh  utils.sh
